--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css/main.css" />
 		<noscript><link rel="stylesheet" href="/css/noscript.css" /></noscript>
+		<link rel="icon" href="/images/carrot.png" type="image/png">
 	</head>
 	<body class="is-preload">
 
