--- a/views/food_item_list.ejs
+++ b/views/food_item_list.ejs
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
+		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
