Update transitions in css

--- a/views/diet.html
+++ b/views/diet.html
@@ -29,7 +29,7 @@
 						<li><a href="/news">News</a></li>
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="#" class="button primary fit">Get Started</a></li>
+						<li><a href="/#one" class="button primary fit">Get Started</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="/maintenance" class="button primary fit">About Us</a></li>
@@ -105,7 +105,7 @@
 									<a href="/food_item_list?diet=keto">
 										<h2>Ketogenic</h2>
 										<div class="content">
-											<p></b>The keto diet is based more on the ratio of fat, protein, and carbs in the diet</p>
+											<p><b>The keto diet is based more on the ratio of fat, protein, and carbs in the diet</b></p>
 										</div>
 									</a>
 								</article>
