--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
 							<li><a href="/news">News</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#one" class="button primary fit">Get Started</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="/maintenance" class="button primary fit">About Us</a></li>
