--- a/views/news.ejs
+++ b/views/news.ejs
@@ -5,7 +5,7 @@
 		<title>Trending Food Blogs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/css1/main.css" />
+		<link rel="stylesheet" href="/css1/main1.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
 	</head>
@@ -29,7 +29,7 @@
 						<li><a href="/news">News</a></li>
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="#" class="button primary fit">Get Started</a></li>
+						<li><a href="/#one" class="button primary fit">Get Started</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="/maintenance" class="button primary fit">About Us</a></li>
@@ -50,8 +50,8 @@
 										<span class="image">
 											<img src= "<%= item.articles[i].image %>" width="300" height="300" />
 										</span>
-										<a href=<%=item.articles[i].url %> target="_blank">
-											<h2><%= item.articles[i].title %></h2>
+										<a href=<%=item.articles[i].url %> target="_blank">											
+											<h3><%= item.articles[i].title %></h3>											
 										</a>
 									</article>
 								<% } %>
