Update food item design css

--- a/views/food_item.ejs
+++ b/views/food_item.ejs
@@ -37,7 +37,7 @@
 				</nav>
 
 				<!-- Main -->
-					<div id="main">
+					<!-- <div id="main">
 						<div class="inner">
 						<h1><center>RECIPE</center></h1>
 						<span class="image main"><center><img src="<%= url_recipe %>"/></center></span>
@@ -45,28 +45,24 @@
 
 						<h1><center>NUTRITION</center></h1>
 						<span class="image main"><center><img src= "<%= "/images_nutrition/"+id+".png"%>"/></center></span>
-						<br><br> 
+						<br><br>	
+						</div>						
+					</div> -->
 
-							
-
-						</div>
-						
-					</div>
-
-				<!-- <center>
+				<center>
 					<div class="row">
-						<div class="column">
+						<div class="col-1">
 							<h1><center>RECIPE</center></h1>
 							<span class="image main"><center><img src="<%= url_recipe %>" width="100" height="600"/></center></span>
 							<br><br>	
 						</div>
-						<div class="column">
+						<div class="col-2">
 							<h1><center>NUTRITION</center></h1>
 							<span class="image main"><center><img src= "<%= "/images_nutrition/"+id+".png"%>" width="100" height="600"/></center></span>
 							<br><br> 
 						</div>
 					</div>
-				</center>					 -->
+				</center>					
 			</div>
 
 		<!-- Scripts -->
