--- a/views/food_item_list.ejs
+++ b/views/food_item_list.ejs
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -42,6 +43,199 @@
 							<header>
 								<h1><center>FOOD ITEMS</center></h1>
 							</header>
+							<!-- <div class='loader'></div> -->
+
+							<div class="socket">
+								<div class="gel center-gel">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c1 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c2 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c3 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c4 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c5 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c6 r1">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								
+								<div class="gel c7 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								
+								<div class="gel c8 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c9 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c10 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c11 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c12 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c13 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c14 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c15 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c16 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c17 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c18 r2">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c19 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c20 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c21 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c22 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c23 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c24 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c25 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c26 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c28 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c29 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c30 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c31 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c32 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c33 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c34 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c35 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c36 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>
+								<div class="gel c37 r3">
+								  <div class="hex-brick h1"></div>
+								  <div class="hex-brick h2"></div>
+								  <div class="hex-brick h3"></div>
+								</div>								
+							</div>
+
+
 							<section class="tiles">
 								<% for( var i = 0; i < Math.min(item.length,6); i++ ) { %>
 									<article class=<%="style"+(i+1)%>>
@@ -67,6 +261,17 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
+			<script>
+				$(window).on('load',function(){
+					$(".socket").fadeOut(5000);
+				});
+					// $(".loading-container").fadeOut(1000);
+					// $(".l1").fadeOut(1000);
+					// $(".l2").fadeOut(1000);
+					// $(".l3").fadeOut(1000);
+					// $(".l4").fadeOut(1000);
+					// $(".content").fadeIn(2000);
+			</script>
 
 	</body>
 </html>
