--- a/views/food_item_list.ejs
+++ b/views/food_item_list.ejs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -45,7 +45,7 @@
 							</header>
 							<!-- <div class='loader'></div> -->
 
-							<div class="socket">
+							<!-- <div class="socket">
 								<div class="gel center-gel">
 								  <div class="hex-brick h1"></div>
 								  <div class="hex-brick h2"></div>
@@ -233,7 +233,7 @@
 								  <div class="hex-brick h2"></div>
 								  <div class="hex-brick h3"></div>
 								</div>								
-							</div>
+							</div> -->
 
 
 							<section class="tiles">
@@ -261,7 +261,7 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
-			<script>
+			<!-- <script>
 				$(window).on('load',function(){
 					$(".socket").fadeOut(5000);
 				});
@@ -271,7 +271,7 @@
 					// $(".l3").fadeOut(1000);
 					// $(".l4").fadeOut(1000);
 					// $(".content").fadeIn(2000);
-			</script>
+			</script> -->
 
 	</body>
 </html>
