--- a/views/news.ejs
+++ b/views/news.ejs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css1/main1.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -44,7 +44,7 @@
 								<h1><center>TRENDING FOOD BLOGS</center></h1>
 							</header>
 
-							<div class="socket">
+							<!-- <div class="socket">
 								<div class="gel center-gel">
 									<div class="hex-brick h1"></div>
 									<div class="hex-brick h2"></div>
@@ -232,7 +232,7 @@
 									<div class="hex-brick h2"></div>
 									<div class="hex-brick h3"></div>
 								</div>								
-							</div>
+							</div> -->
 
 							<section class="tiles">
 								<% var p = Math.floor((Math.random() * 5) + 0);
@@ -261,17 +261,17 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
-			<script>
-				$(window).on('load',function(){
-					$(".socket").fadeOut(3000);
-				});
-					// $(".loading-container").fadeOut(1000);
-					// $(".l1").fadeOut(1000);
-					// $(".l2").fadeOut(1000);
-					// $(".l3").fadeOut(1000);
-					// $(".l4").fadeOut(1000);
-					// $(".content").fadeIn(2000);
-			</script>
+			// <script>
+			// 	$(window).on('load',function(){
+			// 		$(".socket").fadeOut(3000);
+			// 	});
+			// 		// $(".loading-container").fadeOut(1000);
+			// 		// $(".l1").fadeOut(1000);
+			// 		// $(".l2").fadeOut(1000);
+			// 		// $(".l3").fadeOut(1000);
+			// 		// $(".l4").fadeOut(1000);
+			// 		// $(".content").fadeIn(2000);
+			// </script>
 
 	</body>
 </html>
