--- a/views/diet.html
+++ b/views/diet.html
@@ -41,6 +41,7 @@
 						<div class="inner">
 							<header>
 								<h1><center>DIETS</center></h1>
+								<div class='loader'></div>								
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -121,5 +122,16 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
+			<script>
+				$(window).on('load',function(){
+					$(".loader").fadeOut(5000);
+				});
+					// $(".loading-container").fadeOut(1000);
+					// $(".l1").fadeOut(1000);
+					// $(".l2").fadeOut(1000);
+					// $(".l3").fadeOut(1000);
+					// $(".l4").fadeOut(1000);
+					// $(".content").fadeIn(2000);
+			</script>
 	</body>
 </html>
