--- a/views/diet.html
+++ b/views/diet.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -124,7 +125,7 @@
 			<script src="/js1/main.js"></script>
 			<script>
 				$(window).on('load',function(){
-					$(".loader").fadeOut(5000);
+					$(".loader").fadeOut(1000);
 				});
 					// $(".loading-container").fadeOut(1000);
 					// $(".l1").fadeOut(1000);
