--- a/views/food_item_list.ejs
+++ b/views/food_item_list.ejs
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -42,8 +42,8 @@
 						<div class="inner">
 							<header>
 								<h1><center>FOOD ITEMS</center></h1>
+								<div class='loader'></div>
 							</header>
-							<!-- <div class='loader'></div> -->
 
 							<!-- <div class="socket">
 								<div class="gel center-gel">
@@ -261,9 +261,9 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
-			<!-- <script>
+			<script>
 				$(window).on('load',function(){
-					$(".socket").fadeOut(5000);
+					$(".loader").fadeOut(2000);
 				});
 					// $(".loading-container").fadeOut(1000);
 					// $(".l1").fadeOut(1000);
@@ -271,7 +271,7 @@
 					// $(".l3").fadeOut(1000);
 					// $(".l4").fadeOut(1000);
 					// $(".content").fadeIn(2000);
-			</script> -->
+			</script>
 
 	</body>
 </html>
