--- a/views/cuisines.html
+++ b/views/cuisines.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="/css1/main.css" />
 		<noscript><link rel="stylesheet" href="/css1/noscript.css" /></noscript>
 		<link rel="icon" href="/images/carrot.png" sizes="64x64" type="image/png">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -41,6 +42,7 @@
 						<div class="inner">
 							<header>
 								<h1><center>CUISINES</center></h1>
+								<div class='loader'></div>								
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -154,6 +156,17 @@
 			<script src="/js1/breakpoints.min.js"></script>
 			<script src="/js1/util.js"></script>
 			<script src="/js1/main.js"></script>
+			<script>
+				$(window).on('load',function(){
+					$(".loader").fadeOut(1000);
+				});
+					// $(".loading-container").fadeOut(1000);
+					// $(".l1").fadeOut(1000);
+					// $(".l2").fadeOut(1000);
+					// $(".l3").fadeOut(1000);
+					// $(".l4").fadeOut(1000);
+					// $(".content").fadeIn(2000);
+			</script>
 
 	</body>
 </html>
